new stories: hi, nn

--- a/stories/hi/0095_ज़ामा-बहुत-अच्छी-है.html
+++ b/stories/hi/0095_ज़ामा-बहुत-अच्छी-है.html
@@ -91,7 +91,7 @@ Michael Oguttu<br>हिन्दी</div><p style="page-break-after: always;"><
 
 <p><img src="https://global-asp.github.io/img/0095/10.jpg" /></p>
 
-<p>मै अपने बटन बंद करती हूँ और फीते बांधती हूँ।</p>
+<p>मै अपने बटन बंद करती हूँ और फीते बाँधती हूँ।</p>
 
 <div class="pagenum">9</div>
 <p style="page-break-after: always;"></p>
