--- a/stories/hi/0095_ज़ामा-बहुत-अच्छी-है_slides.html
+++ b/stories/hi/0095_ज़ामा-बहुत-अच्छी-है_slides.html
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0095/10.jpg" /></p>
-<p>मै अपने बटन बंद करती हूँ और फीते बांधती हूँ।</p>
+<p>मै अपने बटन बंद करती हूँ और फीते बाँधती हूँ।</p>
 <center>
 <strong>9</strong>
 </center>
