--- a/stories/index.html
+++ b/stories/index.html
@@ -150,7 +150,7 @@
     </tr>
     <tr>
       <td>0064</td>
-      <td><a href="http://africanstorybook.org/stories/joy-goes-school">Joy goes to school.</a></td>
+      <td><a href="http://africanstorybook.org/stories/joy-goes-school">Joy goes to school</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
       <td><a href="#zh0064">zh</a></td>
     </tr>
@@ -192,7 +192,7 @@
     </tr>
     <tr>
       <td>0093</td>
-      <td><a href="http://africanstorybook.org/stories/my-baby-boy">My baby boy.</a></td>
+      <td><a href="http://africanstorybook.org/stories/my-baby-boy">My baby boy</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
       <td><a href="#yue0093">yue</a>, <a href="#zh0093">zh</a></td>
     </tr>
@@ -222,7 +222,7 @@
     </tr>
     <tr>
       <td>0123</td>
-      <td><a href="http://africanstorybook.org/stories/lets-go">Let's go</a></td>
+      <td><a href="http://africanstorybook.org/stories/lets-go">Let’s go</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
       <td><a href="#yue0123">yue</a>, <a href="#zh0123">zh</a></td>
     </tr>
@@ -246,13 +246,13 @@
     </tr>
     <tr>
       <td>0130</td>
-      <td><a href="http://africanstorybook.org/stories/my-grandma">My grandma.</a></td>
+      <td><a href="http://africanstorybook.org/stories/my-grandma">My grandma</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
       <td><a href="#zh0130">zh</a></td>
     </tr>
     <tr>
       <td>0134</td>
-      <td><a href="http://africanstorybook.org/stories/if-i-were">If I were…………</a></td>
+      <td><a href="http://africanstorybook.org/stories/if-i-were">If I were…</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
       <td><a href="#no0134">no</a></td>
     </tr>
@@ -348,7 +348,7 @@
     </tr>
     <tr>
       <td>0287</td>
-      <td><a href="http://africanstorybook.org/stories/mr-fly-and-mr-big-head">Mr Fly and Mr Big Head </a></td>
+      <td><a href="http://africanstorybook.org/stories/mr-fly-and-mr-big-head">Mr Fly and Mr Big Head</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
       <td><a href="#no0287">no</a></td>
     </tr>
