--- a/stories/nn/0001_ein-veldig-høg-mann_slides.html
+++ b/stories/nn/0001_ein-veldig-høg-mann_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0001/03.jpg" /></p>
-<p>Døropninga hans for lav.</p>
+<p>Døropninga hans var for lav.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://global-asp.github.io/img/0001/08.jpg" /></p>
-<p>Han laga ei veldig høy dørramme.</p>
+<p>Han laga ei veldig høg dørramme.</p>
 <center>
 <strong>7</strong>
 </center>
