--- a/stories/nn/0001_ein-veldig-høg-mann.html
+++ b/stories/nn/0001_ein-veldig-høg-mann.html
@@ -42,7 +42,7 @@ Cornelius Gulare<br>nynorsk</div><p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0001/03.jpg" /></p>
 
-<p>Døropninga hans for lav.</p>
+<p>Døropninga hans var for lav.</p>
 
 <div class="pagenum">2</div>
 <p style="page-break-after: always;"></p>
@@ -77,7 +77,7 @@ Cornelius Gulare<br>nynorsk</div><p style="page-break-after: always;"></p>
 
 <p><img src="https://global-asp.github.io/img/0001/08.jpg" /></p>
 
-<p>Han laga ei veldig høy dørramme.</p>
+<p>Han laga ei veldig høg dørramme.</p>
 
 <div class="pagenum">7</div>
 <p style="page-break-after: always;"></p>
