update to multilingual imagebank

--- a/imagebank/index.html
+++ b/imagebank/index.html
@@ -4,11 +4,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" >
     <title>ASP Imagebank Explorer</title>
     <meta content="">
-    <link rel="stylesheet" type="text/css"
-      href="https://yegor256.github.io/tacit/tacit.min.css"/>
-    <link rel="stylesheet" type="text/css"
-      href="img.css"/>
-    <script src="asp_img_wordlist.js" type="text/javascript"></script>
+    <link rel="stylesheet" type="text/css" href="https://yegor256.github.io/tacit/tacit.min.css"/>
+    <link rel="stylesheet" type="text/css" href="img.css"/>
+<!--     <script src="asp_img_wordlist.js" type="text/javascript"></script> -->
     <script type="text/javascript">
       function contains(a, obj) {
         var i = a.length;
@@ -20,21 +18,55 @@
         return false;
       }
 
-      function img_search(args) {
+      fileadded = "";
+      l_changed = "";
+
+      function loadwordlist(lang) {
+        wl = 'js/asp_img_wordlist-' + lang + '.js';
+        if (fileadded != wl) {
+          var wlsrc = document.createElement('script');
+          wlsrc.setAttribute("type","text/javascript");
+          wlsrc.setAttribute("src", wl);
+          wlsrc.setAttribute("onload", "quick_api()");
+          document.getElementsByTagName("head")[0].appendChild(wlsrc);
+          fileadded = wl;
+        }
+      }
+
+      function img_search(args,l) {
         var input = window.key_input;
         var output = document.getElementById("output");
         var message = document.getElementById("message");
         var result_array = [];
         var counter = 0;
         var keyword = input.value;
+        var lang = "en";
         if (args) {
           keyword = args;
         }
+
+        var geturl = location.href;
+        if (/\?lang=/.test(geturl) == true) {
+          lang = /\?lang=([a-z]+)/.exec(geturl)[1];
+        }
+
+        if (l) {
+          lang = l;
+        }
+
+        lang_switcher = document.getElementById("lang_switcher");
+
+        if (l_changed != "") {
+          lang = lang_switcher.value;
+        }
+        loadwordlist(lang);
+
         input.value = keyword;
         input.select();
+        window.lang_switcher.value = lang;
         for (var n = 0; n<img_index.length; n++) {
           key_array = img_index[n].k.split(",");
-          if (contains(key_array, keyword)) {
+          if (contains(key_array, keyword.toLowerCase())) {
             img_splt = img_index[n].i.split("/");
             img = img_splt[1];
             idx = img_splt[0];
@@ -55,15 +87,62 @@
         }
         output.innerHTML = "              <table>\n        <tr>\n" + result_array.join("\n") + "        </tr>\n      </table>";
       }
+
+      function quick_api() {
+        var geturl = location.href;
+        var lang = "en";
+        if (/\?/.test(geturl) == true) {
+          if (/\?lang=/.test(geturl) == true) {
+            if (/&q=/.test(geturl) == true) {
+              lang = /\?lang=([a-z]+)&q=.*/.exec(geturl)[1];
+              var args = /\?.*&q=(.*)/.exec(geturl)[1];
+              img_search(decodeURI(args),lang);
+            } else {
+              lang = /\?lang=([a-z]+)/.exec(geturl)[1];
+              loadwordlist(lang);
+            }
+          } else {
+            var args = /\?(.*)/.exec(geturl)[1];
+            img_search(decodeURI(args),"en");
+          }
+        } else if (fileadded == "") {
+          loadwordlist(lang);
+        }
+        window.key_input.focus();
+        window.lang_switcher.value = lang;
+      }
     </script>
   </head>
-  <body onload="var geturl = location.href; if (/\?/.test(geturl) == true) { var args = /\?(.*)/.exec(geturl)[1]; img_search(args);} window.key_input.focus();">
+  <body onload="quick_api()">
     <h1>ASP Imagebank Explorer</h1>
     <h2>Search</h2>
       <form onsubmit="return false">
+        <table class="layout"><tr><td>
         <input type="text" id="key_input" autocomplete="off" accesskey="s" />
+      </td><td>
+      <select id="lang_switcher" onchange="l_changed='y'; loadwordlist(this.value);">
+        <option value="af">Afrikaans</option>
+        <option value="zh">Chinese</option>
+        <option value="en">English</option>
+        <option value="eo">Esperanto</option>
+        <option value="fr">French</option> 
+        <option value="de">German</option>
+        <option value="ha">Hausa</option>
+        <option value="hi">Hindi</option>
+        <option value="sw">Kiswahili</option>
+        <option value="lg">Luganda</option>
+        <option value="lgg">Lugbarati</option>
+        <option value="no">Norwegian</option>
+        <option value="pt">Portuguese</option>
+        <option value="ru">Russian</option>
+        <option value="es">Spanish</option>
+        <option value="yo">Yoruba</option>
+      </select>
+      </td></tr><tr><td>
         <input type="submit" value="Search" onclick="img_search()">
+    </td></tr></table>
       </form>
+
       <div id="message">&nbsp;</div>
     <h2>Gallery</h2>
       <div id="output">&nbsp;</div>
